Fix Dragging Off Screen Bug
Pokemon icon would stay attached to mouse even if the mouse wasn't being held down.

--- a/src/stylesheets/MainPage.css
+++ b/src/stylesheets/MainPage.css
@@ -145,6 +145,7 @@
     opacity: 0.7;
     visibility: hidden; /*Changed when dragging*/
     pointer-events: none; /*Allows clicking through it*/
+    z-index: 200;
 }
 
 .scroll-container
